// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableRow /> ref should work 1`] = `
.c0 {
  box-sizing: border-box;
}

<tr
  class="poodle-box c0 poodle-table-row c1 c1"
>
  <td>
    TableRow
  </td>
</tr>
`;

exports[`<TableRow /> should render Box props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  margin-top: 20px;
}

<table>
  <tbody>
    <tr
      class="poodle-box c0 poodle-table-row c1 c2"
      id="id"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableRow /> should render TableRow correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

<table>
  <tbody>
    <tr
      class="poodle-box c0 poodle-table-row c1 c1"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableRow /> should render props isSelected correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

<table>
  <tbody>
    <tr
      class="poodle-box c0 poodle-table-row c1 c1"
      data-selected="true"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableRow /> theming should disable classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<table>
  <tbody>
    <tr
      class="poodle-box c0 poodle-table-row c1"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableRow /> theming should extend size styles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c7 {
  height: 100px;
}

<div
  class="poodle-box c0 poodle-table c1 c2"
>
  <table
    class="poodle-box c0 poodle-table__table c4 c2"
  >
    <tbody>
      <tr
        class="poodle-box c0 poodle-table-row c7 c2"
      >
        <td>
          TableRow
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableRow /> theming should extend size styles with mode 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c7 {
  height: 100px;
  height: 110px;
}

<div
  class="poodle-box c0 poodle-table c1 c2"
>
  <table
    class="poodle-box c0 poodle-table__table c4 c2"
  >
    <tbody>
      <tr
        class="poodle-box c0 poodle-table-row c7 c2"
      >
        <td>
          TableRow
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableRow /> theming should extend styles in global 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<table>
  <tbody>
    <tr
      class="poodle-box c0 poodle-table-row c1 c2"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableRow /> theming should extend styles in local 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<table>
  <tbody>
    <tr
      class="poodle-box c0 poodle-table-row c1 c2"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableRow /> theming should override classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<table>
  <tbody>
    <tr
      class="poodle-box c0 poodle-table-row morning c1"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableRow /> theming should override styles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-top: 50px;
}

<table>
  <tbody>
    <tr
      class="poodle-box c0 poodle-table-row c1 c2"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableRow /> theming should render with default props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

<table>
  <tbody>
    <tr
      class="poodle-box c0 poodle-table-row c1 hello c1"
      id="id"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;
